--- a/esp32/firmware/platformio.ini
+++ b/esp32/firmware/platformio.ini
@@ -8,5 +8,8 @@ lib_deps =
   adafruit/Adafruit AHTX0 @ ^1.0.6
   ottowinter/ESPAsyncTCP@^1.2.2
   knolleary/PubSubClient@^2.8
+  adafruit/Adafruit ST7735 and ST7789 Library @ ^1.10.0
+  adafruit/Adafruit GFX Library @ ^1.11.5
+  bblanchon/ArduinoJson @ ^6.21.3
 
 build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_OPEN_SRC
